--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,12 @@
     "no-param-reassign": 0,
     "no-plusplus": 0,
     "indent": ["error", 2],
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "singleAttributePerLine": true
+      }
+    ],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
